# beatgen

./: .gitignore  2commits_diff.txt  2commits_diff2.txt  CLAUDE.md  Makefile  generate_all_types.sh  generate_types.sh  package-lock.json  package.json
backend/: .env  .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_melody2.py  test_oauth.py  test_sse.py
backend/app/: main.py
backend/app/core/: config.py  project_serializer.py  security.py  supabase.py  tools.py
backend/app/schemas/: assistant.py  project.py  token.py  user.py
backend/app/types/: assistant_actions.py  sse.py
backend/app/utils/: __init__.py  request_manager.py  sse.py  sse_queue_manager.py
backend/app2/: README.md  __init__.py  main.py
backend/app2/api/: dependencies.py
backend/app2/core/: config.py  exceptions.py  logging.py
backend/app2/dto/: projects_dto.py
backend/app2/infrastructure/: __init__.py
backend/app2/llm/: available_models.py  chat_wrapper.py
backend/app2/models/: __init__.py  assistant.py  base.py  project.py  project_track.py  token.py  track.py  user.py
backend/app2/repositories/: __init__.py  audio_track_repository.py  base_repository.py  drum_sample_public_repository.py  drum_track_repository.py  (+8 more)
backend/clients/: anthropic_client.py  instructor_client.py  perplexity_client.py  pydantic_ai_client.py  pydantic_ai_client2.py
backend/scripts/: README_SOUNDFONTS.md  __init__.py  add_drum_sample_ui.html  add_drumkits.py  add_soundfonts.py  list_soundfonts.py
backend/tests/: README.md  conftest.py  test_project_schema.py
src/: App.css  (+4 more)
(+548 files in other folders)
