[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.24",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "music21>=9.5.0",
    "mido>=1.3.3",
    "openai>=1.75.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
